Remove the city from a talk

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
 						<span class="talk_title" property="name">Privacy Calculus in Maude</span>,
 						<span property="superEvent" typeof="Event">
 							<span property="name" class="talk_event"><a href="http://fsvg.math.ntua.gr/rulesworkshop2018.html" property="url">Workshop "Rules: Logic and Applications"</a></span>,
-							<span class="talk_location" property="location">National Technical University of Athens, Greece</span>.
+							<span class="talk_location" property="location">National Technical University of Athens</span>.
 						</span>
 						<span class="talk_note">(<span property="subjectOf" typeof="PresentationDigitalDocument"><a property="url" href="http://fsvg.math.ntua.gr/RuleMLworkshop/Pitsiladis.pdf">slides</a></span>)</span>
 					</li>
