Add academia.edu profile

--- a/index.html
+++ b/index.html
@@ -37,6 +37,10 @@
 			<a property="sameAs" href="https://www.linkedin.com/in/g-v-pitsiladis" target="_blank" title="LinkedIn">
 				<img alt="LinkedIn" src="/files/images/LI-In-Bug.png" width="16" height="16">
 			</a>
+
+                        <a property="sameAs" href="https://ntua.academia.edu/GeorgiosVPitsiladis" target="_blank" title="Academia.edu">
+                                <img alt="Academia.edu" src="https://a.academia-assets.com/images/academia-logo-2021.svg" width="16" height="16">
+                        </a>
 		</aside>
 	</header>
 
