Fix RDF type of Koutras in paper

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 					<li typeof="ScholarlyArticle" resource="#alun2021">
 						<time class="publication_date" property="datePublished">2021</time>
 						<span class="publication_author">
-								<span property="author">Costas D. Koutras</span>
+								<span property="author" resource="#koutras">Costas D. Koutras</span>
 								&amp;
 								<span property="author" resource="#gvpitsiladis">Georgios V. Pitsiladis</span>:
 						</span>
